<resources>
    <string name="app_name" translatable="false">Creative Vendor</string>
    <string name="permission_pick_rationale" translatable="false">READ_EXTERNAL_STORAGE diperlukan izin untuk memilih gambar.</string>
    <string name="permission_crop_rationale" translatable="false">WRITE_EXTERNAL_STORAGE diperlukan izin untuk menyimpan gambar yang dipangkas.</string>
    <string name="button_allow" translatable="false">Setuju</string>
    <string name="button_deny" translatable="false">Tidak</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="please_wait" translatable="false">Mohon Tunggu...</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="cancel" translatable="false">Batal</string>
    <string name="hindi" translatable="false">Hindi</string>
    <string name="intro_1" translatable="false">Daftarkan diri anda, \n jadilah pekerja dan pemberi pekerjaan yang baik.</string>
    <string name="intro_2" translatable="false">Bentuk grafis dalam membuat suatu halaman web.</string>
    <string name="intro_3" translatable="false">Hire the best Photographer &amp; create your moment.</string>
    <string name="internet_concation" translatable="false">Harap aktifkan koneksi internet Anda.</string>
    <string name="server_error" translatable="false">Tidak ada koneksi internet.</string>
    <string name="closeMsg" translatable="false">Apa Anda yakin ingin tutup Crative Apps?</string>
    <string name="yes" translatable="false">Ya</string>
    <string name="no" translatable="false">Tidak</string>
    <string name="jobs_completed" translatable="false">Kerjaan Selesai</string>
    <string name="completion" translatable="false">% Selesai</string>
    <string name="hr_add_on" translatable="false">/Jam</string>
    <string name="fixed_rate_add_on" translatable="false">Tetap</string>
    <string name="reviews" translatable="false">ULASAN(</string>
    <string name="book_artist" translatable="false">Pesan Pelamar</string>
    <string name="book_msg" translatable="false">Anda yakin untuk memesan</string>
    <string name="chats" translatable="false">Chat</string>
    <string name="val_comment" translatable="false">Masukan Komentar</string>
    <string name="take_image" translatable="false">System : Ambil gambar dengan</string>
    <string name="select_picture" translatable="false">Pilih Foto</string>
    <string name="val_des" translatable="false">Silakan masukan deskripsi</string>
    <string name="val_address" translatable="false">Silakan pilih alamat</string>
    <string name="val_title" translatable="false">"Silahkan masukan judul "</string>
    <string name="val_description" translatable="false">Silakan masukan deskripsi</string>
    <string name="select_category" translatable="false">Pilih Kategori</string>
    <string name="val_email" translatable="false">Silakan Alamat Email</string>
    <string name="location_enabled" translatable="false">Tidak bisa mendapatkan lokasi Pastikan lokasi diaktifkan pada perangkat</string>
    <string name="artist_here" translatable="false">Pelamar Disini</string>
    <string name="my_bookings" translatable="false">Pesanan Saya</string>
    <string name="cash_payment" translatable="false">Bayar Tunai</string>
    <string name="cash_msg" translatable="false">Anda yakin ingin melakukan pembayaran tunai?</string>
    <string name="val_category" translatable="false">Silakan pilih Kategori</string>
    <string name="val_price" translatable="false">Silahkan Masukan Harga</string>
    <string name="val_pass" translatable="false">Katasandi minimal 6 karakter!</string>
    <string name="val_pass1" translatable="false">Ulangi Katasandi minimal 6 karakter!</string>
    <string name="val_name" translatable="false">Silakan masukan nama anda</string>
    <string name="pass_not_match" translatable="false">Katasandi tidak sama</string>
    <string name="pending" translatable="false">Pending</string>
    <string name="accepted" translatable="false">Accepted</string>
    <string name="rejected" translatable="false">Ditolak</string>
    <string name="completed" translatable="false">Selesai</string>
    <string name="decline" translatable="false">Ditolak</string>
    <string name="decline_msg" translatable="false">Apakah Anda yakin ingin menolak janji ini?</string>
    <string name="waiting_artist" translatable="false">Menunggu Respon Pelamar</string>
    <string name="request_acc" translatable="false">Permintaan diterima oleh pelamar</string>
    <string name="invoice_genrate" translatable="false">Tagihan Dibuat</string>
    <string name="invoice_paid" translatable="false">Tagihan diBayar</string>
    <string name="work_inpro" translatable="false">Pekerjaan sedang berjalan</string>
    <string name="booking_with" translatable="false">Pesan Dengan</string>
    <string name="date" translatable="false">Tanggal:</string>
    <string name="applied1" translatable="false">Disetujui:</string>
    <string name="confirm" translatable="false">Dikonfirmasi</string>
    <string name="complete" translatable="false">Selesai</string>
    <string name="inprogress" translatable="false">Sedang berjalan</string>
    <string name="reject" translatable="false">Tolak</string>
    <string name="reject_msg" translatable="false">Anda yakin ingin menolak aplikasi?</string>
    <string name="confirm_msg" translatable="false">Anda yakin ingin mengkonfirmasi aplikasi?</string>
    <string name="complete_msg" translatable="false">Anda yakin ingin menyelesaikan aplikasi?</string>
    <string name="km" translatable="false">KM dari anda</string>
    <string name="job_id" translatable="false">ID Pekerjaan:</string>
    <string name="open" translatable="false">Buka</string>
    <string name="not_edit_job" translatable="false">Anda tidak dapat mengedit pekerjaan ini karena Pelamar sudah melamar</string>
    <string name="delete" translatable="false">Hapus</string>
    <string name="delete_job" translatable="false">Anda yakin ingin hapus pekerjaan?</string>
    <string name="complete_job" translatable="false">Anda yakin ingin selesaikan kerjaan ini?</string>
    <string name="service" translatable="false">No. Tagihan #</string>
    <string name="unpaid" translatable="false">Belum Bayar</string>
    <string name="paid" translatable="false">Terbayar</string>
    <string name="duration" translatable="false">Lama:</string>
    <string name="solve" translatable="false">Dipecahkan</string>
    <string name="close" translatable="false">Tutup</string>
    <string name="future_bookings" translatable="false">Pesanan akan datang</string>
    <string name="all_category" translatable="false">Semua Kategori</string>
    <string name="get_discount" translatable="false">Kupon</string>
    <string name="code_copy" translatable="false">Salin Kode</string>
    <string name="my_code" translatable="false">Halo, ini adalah Kode Referensi saya</string>
    <string name="opps_share" translatable="false">Opps !! Tampaknya Anda belum menginstal aplikasi berbagi apa pun.</string>
    <string name="invoice" translatable="false">Tagihan</string>
    <string name="ic_wallet" translatable="false">Dompet</string>
    <string name="fabartist" translatable="false">Creative Apps</string>
    <string name="jobs" translatable="false">Buat Pekerjaan</string>
    <string name="notification" translatable="false">Pemberitahuan</string>
    <string name="profile_settings" translatable="false">Atur Profil</string>
    <string name="female" translatable="false">Wanita</string>
    <string name="male" translatable="false">Laki - Laki</string>
    <string name="logout_msg" translatable="false">Yakin ingin keluar?</string>
    <string name="support" translatable="false">Bantuan</string>
    <string name="home" translatable="false">Beranda</string>
    <string name="camera" translatable="false">Kamera</string>
    <string name="gallery" translatable="false">Galeri</string>
    <string name="sign_up" translatable="false">Daftar</string>
    <string name="sign_in" translatable="false">Masuk</string>
    <string name="applied_job" translatable="false">Pekerjaan</string>
    <string name="search_by_artist" translatable="false">Cari dari Pelamar</string>
    <string name="no_application_found" translatable="false">Tidak Ditemukan Pelamar</string>
    <string name="book_now" translatable="false">PESAN</string>
    <string name="quick_chat" translatable="false">QUICK CHAT</string>
    <string name="future_book" translatable="false">Akan Pesan</string>
    <string name="image_gallery" translatable="false">Galeri Gambar</string>
    <string name="video_gallery" translatable="false">Video Galeri</string>
    <string name="no_video_available" translatable="false">Tidak Ada Video</string>
    <string name="about" translatable="false">About</string>
    <string name="qualification" translatable="false">Kualifikasi</string>
    <string name="skills" translatable="false">Kemampuan</string>
    <string name="products" translatable="false">LAYANAN</string>
    <string name="privious_work" translatable="false">Pekerjaan Sebelumnya</string>
    <string name="no_chat_history_found" translatable="false">Tidak Ada Riwayat Chat yang Ditemukan</string>
    <string name="comment" translatable="false">Komentar</string>
    <string name="write_your_message" translatable="false">Tulis Pesan Anda</string>
    <string name="update_job" translatable="false">Ubah Pekerjaan</string>
    <string name="all_categories" translatable="false">Semua Kategori</string>
    <string name="title" translatable="false">Judul</string>
    <string name="address" translatable="false">Address</string>
    <string name="enter_your_description" translatable="false">Masukan Deskripsi</string>
    <string name="update_picture" translatable="false">Ubah Gambar</string>
    <string name="update" translatable="false">Ubah</string>
    <string name="forgot_password" translatable="false">Lupa Katasandi</string>
    <string name="email_id" translatable="false">Alamat Email</string>
    <string name="submit" translatable="false">Kirim</string>
    <string name="apply_code" translatable="false">Gunakan Code</string>
    <string name="copy" translatable="false">Salin</string>
    <string name="invite_friend" translatable="false">Undang Teman</string>
    <string name="map" translatable="false">Map</string>
    <string name="no_booking_found" translatable="false">Tidak Ada Pemesanan yang Ditemukan</string>
    <string name="no_notification_found" translatable="false">Tidak Ada Pemberitahuan</string>
    <string name="payment" translatable="false">Tambah Dana</string>
    <string name="work_completed" translatable="false">Pekerjaan telah selesai</string>
    <string name="write_code_here" translatable="false">Tulis Kode Di Sini</string>
    <string name="total_amount" translatable="false">Jumlah Total</string>
    <string name="online_payment" translatable="false">Pembayaran Online</string>
    <string name="or" translatable="false">Atau</string>
    <string name="cash_payment1" translatable="false">Bayar Tunai</string>
    <string name="post_job" translatable="false">Buat Pekerjaan</string>
    <string name="price" translatable="false">Harga</string>
    <string name="budget" translatable="false">Biaya</string>
    <string name="add_picture" translatable="false">Add Picture</string>
    <string name="post" translatable="false">Buat</string>
    <string name="promotion" translatable="false">Promosi</string>
    <string name="apply_code1" translatable="false">Gunakan Kode</string>
    <string name="todo">TODO</string>
    <string name="undang_teman_anda_untuk_bergabung_dengan_creative_apps_agar_pekerjaan_lebih_menyenangkan_gunakan_kupon_ini_agar_anda_bisa_mendapatkan_50_potongan_biaya_dari_kami" translatable="false">Undang teman anda untuk bergabung dengan Creative Apps agar pekerjaan lebih menyenangkan, gunakan kupon ini agar anda bisa mendapatkan 20% potongan biaya dari kami.</string>
</resources>