<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="Undang teman anda untuk bergabung dengan Creative Apps agar pekerjaan lebih menyenangkan, gunakan kupon ini agar anda bisa mendapatkan 50% potongan biaya dari kami.">


    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_alignTop="@+id/CTVdescription"
                android:layout_alignBottom="@+id/CTVdescription"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-5dp"
                android:layout_marginBottom="-5dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/coupons" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_marginTop="5dp"
                android:text="@string/undang_teman_anda_untuk_bergabung_dengan_creative_apps_agar_pekerjaan_lebih_menyenangkan_gunakan_kupon_ini_agar_anda_bisa_mendapatkan_50_potongan_biaya_dari_kami"
                android:textAppearance="@style/TextAppearance.App.TextInputLayout" />

            <com.nomme.creative.utils.CustomTextView
                android:id="@+id/CTVdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/CTVBaplycode"
                android:layout_marginTop="0dp"
                android:textAppearance="@style/TextAppearance.App.TextInputLayout"
                android:visibility="invisible"
                tools:text="Undang teman anda untuk bergabung dengan Creative Apps agar pekerjaan lebih menyenangkan, gunakan kupon ini agar anda bisa mendapatkan 50% potongan biaya dari kami."
                tools:visibility="invisible" />

            <com.nomme.creative.utils.CustomTextViewBold
                android:id="@+id/CTVBaplycode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_code" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/CTVdescription"
                android:layout_marginTop="120dp"
                android:background="@color/light_gray">

                <com.nomme.creative.utils.CustomTextViewBold
                    android:id="@+id/CTVBcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="" />

                <com.nomme.creative.utils.CustomTextViewBold
                    android:id="@+id/CTVBcopy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:padding="10dp"
                    android:text="@string/copy"
                    android:textColor="@color/colorPrimary" />


            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <com.nomme.creative.utils.CustomButton
        android:id="@+id/CBinvitefriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card"
        android:layout_margin="15dp"
        android:background="@drawable/buttongradient2"
        android:text="@string/invite_friend"
        android:textColor="@color/white" />


</RelativeLayout>
