<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.PersnoalInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <com.nomme.creative.utils.CustomTextViewBold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/address"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/llLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:src="@drawable/ic_placeholder" />

                    <com.nomme.creative.utils.CustomTextView
                        android:id="@+id/tvLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="14sp" />
                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <com.nomme.creative.utils.CustomTextViewBold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:singleLine="true"
                    android:text="@string/about"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.nomme.creative.utils.CustomTextView
                    android:id="@+id/tvAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text=""
                    android:textSize="14sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <com.nomme.creative.utils.CustomTextView
                    android:id="@+id/tvArtistRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="center">

                    <RatingBar
                        android:id="@+id/ratingbar"
                        style="@style/RatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/Profilename"
                        android:layout_centerHorizontal="true"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:rating="4.5"
                        android:scaleX=".5"
                        android:scaleY=".5"
                        android:theme="@style/RatingBar" />

                    <com.nomme.creative.utils.CustomTextView
                        android:id="@+id/tvRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />
                </LinearLayout>


            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_job_briefcase" />

                    <com.nomme.creative.utils.CustomTextView
                        android:id="@+id/tvJobComplete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:singleLine="true"
                        android:text=""
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_workdone" />

                    <com.nomme.creative.utils.CustomTextView
                        android:id="@+id/tvProfileComplete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:singleLine="true"
                        android:text=""
                        android:textSize="14sp" />
                </LinearLayout>


            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <com.nomme.creative.utils.CustomTextViewBold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:singleLine="true"
                    android:text="@string/qualification"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvQualification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
